<resources>
    <string name="app_name">Capstone Project SQLite</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="logo_description">Unofficial Scrap Mechanic Crafting Companion Logo</string>
    <string name="create">Create</string>
    <string name="cancel">Cancel</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="title_activity_recipes">RecipesActivity</string>
    <string name="home">Home</string>
    <string name="calculator">Calculator</string>
    <string name="blocks">Blocks</string>
    <string name="parts">Parts</string>
    <string name="blocks_title">Blocks</string>
    <string name="parts_title">Parts</string>
    <string name="recipes">Recipes</string>
    <string name="goodbye_message">Thanks for using the unofficial Scrap Mechanic crafting guide.\n\nCome back soon.</string>
    <string name="total">Resource Totals</string>

    <string name="title_bearing">Bearing</string>
    <string name="title_switch">Switch</string>
    <string name="title_button">Button</string>
    <string name="title_sensor">Sensor</string>
    <string name="title_sport_suspension">Sport Suspension</string>
    <string name="title_off_road_suspension">Off-Road Suspension</string>
    <string name="title_piston">Piston</string>
    <string name="title_gas_engine">Gas Engine</string>
    <string name="title_electric_engine">Electric Engine</string>
    <string name="title_drivers_seat">Driver\'s Seat</string>
    <string name="title_seat">Seat</string>
    <string name="title_drivers_saddle">Driver\'s Saddle</string>
    <string name="title_saddle">Saddle</string>
    <string name="title_thruster">Thruster</string>
    <string name="title_controller">Controller</string>
    <string name="title_logic_gate">Logic Gate</string>
    <string name="title_timer">Timer</string>
    <string name="title_headlight">Headlight</string>
    <string name="title_chest">Chest</string>
    <string name="title_large_chest">Large Chest</string>
    <string name="title_vacuum_pump">Vacuum Pump</string>
    <string name="title_vacuum_pipe">Vacuum Pipe</string>
    <string name="title_vacuum_pipe_corner">Vacuum Pipe Corner</string>
    <string name="title_gas_container">Gas Container</string>
    <string name="title_battery_container">Battery Container</string>
    <string name="title_water_container">Water Container</string>
    <string name="title_water_cannon">Water Cannon</string>
    <string name="title_chemical_container">Chemical Container</string>
    <string name="title_saw_blade">Saw Blade</string>
    <string name="title_drill">Drill</string>
    <string name="title_wheel">Wheel</string>
    <string name="title_wheel_big">Big Wheel</string>

    <string name="bearing">x5 Scrap Metal</string>
    <string name="switch_rec">x1 Scrap Metal \nx2 Circuit Board</string>
    <string name="button">x1 Scrap Metal \nx2 Circuit Board</string>
    <string name="sensor">x1 Metal Block 1 \nx1 Glass Block \nx2 Circuit Board \nx2 Glue</string>
    <string name="sport_suspension">x5 Metal Block 2 \nx2 Oil</string>
    <string name="off_road_suspension">x10 Metal Block 2 \nx2 Oil</string>
    <string name="piston">x10 Metal Block 2 \nx2 Oil \nx2 Circuit Board \nx1 Component Kit</string>
    <string name="gas_engine">x20 Metal Block 1 \nx5 Oil \nx5 Circuit Board \nx3 Component Kit</string>
    <string name="electric_engine">x20 Metal Block 2 \nx5 Battery \nx10 Circuit Board \nx5 Component Kit</string>
    <string name="drivers_seat">x10 Cotton Wool \nx5 Metal Block 1 \nx3 Circuit Board \nx1 Component Kit</string>
    <string name="seat">x10 Cotton Wool \nx5 Metal Block 1 \nx2 Circuit Board</string>
    <string name="drivers_saddle">x5 Cotton Wool \nx5 Metal Block 1 \nx3 Circuit Board \nx1 Component Kit</string>
    <string name="saddle">x5 Cotton Wool \nx5 Metal Block 1 \nx2 Circuit Board</string>
    <string name="thruster">x40 Metal Block 3 \nx10 Component Kit</string>
    <string name="controller">x5 Metal Block 1 \nx5 Circuit Board \nx1 Component Kit \nx3 Glue</string>
    <string name="logic_gate">x1 Metal Block 1 \nx1 Circuit Board \nx1 Glue</string>
    <string name="timer">x2 Metal Block 1 \nx2 Circuit Board \nx1 Glue</string>
    <string name="headlight">x1 Metal Block 1 \nx1 Glass Block \nx2 Circuit Board \nx1 Glue</string>
    <string name="chest">x40 Metal Block 1 \nx2 Glue</string>
    <string name="large_chest">x60 Metal Block 1 \nx5 Circuit Board \nx3 Component Kit \nx5 Glue</string>
    <string name="vacuum_pump">x10 Metal Block 2 \nx5 Bee\'s Wax \nx5 Circuit Board \nx3 Component Kit</string>
    <string name="vacuum_pipe">x5 Metal Block 2 \nx10 Glass Block \nx2 Circuit Board</string>
    <string name="vacuum_pipe_corner">x5 Metal Block 2 \nx10 Glass Block \nx2 Circuit Board</string>
    <string name="gas_container">x20 Metal Block 1 \nx5 Circuit Board \nx15 Paint Ammo \nx2 Glue</string>
    <string name="battery_container">x20 Metal Block 2 \nx10 Circuit Board \nx15 Paint Ammo \nx2 Glue</string>
    <string name="water_container">x10 Metal Block 1 \nx10 Bee\'s Wax \nx5 Circuit Board \nx2 Glue</string>
    <string name="water_cannon">x10 Metal Block 2 \nx10 Bee\'s Wax \nx2 Component Kit</string>
    <string name="chemical_container">x10 Metal Block 2 \n20 Glass Block \nx5 Circuit Board \nx2 Glue</string>
    <string name="saw_blade">x10 Metal Block 2 \nx20 Metal Block 1</string>
    <string name="drill">x20 Metal Block 2 \nx30 Metal Block 1</string>
    <string name="wheel">x15 Wood Block 1 \n x5 Metal Block 1 \n6 Bee\'s Wax</string>
    <string name="wheel_big">x40 Wood Block 1 \n x10 Metal Block 1 \n8 Bee\'s Wax</string>

    <string name="scrapMetalTitle">Scrap Metal</string>
    <string name="metalBlock1Title">Metal Block 1</string>
    <string name="scrapStoneBlockTitle">Scrap Stone Block</string>
    <string name="woodBlock1Title">Wood Block 1</string>
    <string name="componentKitTitle">Component Kit</string>
    <string name="circuitBoardTitle">Circuit Board</string>
    <string name="waterTitle">Water</string>
    <string name="emberTitle">Ember</string>
    <string name="clamGlueTitle">Clam Glue</string>
    <string name="oilTitle">Oil</string>
    <string name="chemicalTitle">Chemical</string>
    <string name="beesWaxTitle">Bee’s Wax</string>
    <string name="cottonTitle">Cotton</string>
    <string name="glowTitle">Glow</string>
    <string name="flowerPigmentTitle">Flower Pigment</string>



</resources>
